fix font on mobiles

--- a/lab7/styles.css
+++ b/lab7/styles.css
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
     box-sizing: border-box;
+    font-family: "Mulish", sans-serif;
 }
 
 body {
+    font-family: "Mulish", sans-serif;
     background-color: rgb(240, 240, 240);
     display: flex;
     flex-direction: column;
@@ -12,7 +16,6 @@ body {
 
 p {
     margin: 0;
-    font-family: 'Century Gothic';
     font-style: normal;
 }
 
@@ -186,7 +189,7 @@ button {
 }
 
 .predict-today p {
-    font-family: 'Century Gothic';
+    font-family: "Century Gothic";
     font-style: normal;
 }
 
@@ -301,7 +304,7 @@ button {
     }
     .header-bar {
         padding-top: 10px;
-        height: fit-content
+        height: fit-content;
     }
     form {
         margin: 20px 0;
